--- a/src/styles/utilities.css
+++ b/src/styles/utilities.css
@@ -2,32 +2,32 @@
 .pointer-events-none{pointer-events:none;}
 .absolute{position:absolute;}
 .relative{position:relative;}
+.-top-2{top:-0.5rem;}
 .left-auto{left:auto;}
 .right-2{right:0.5rem;}
 .top-0{top:0;}
 .top-2\.2{top:0.55rem;}
-.z-1{z-index:1;}
 .z-2{z-index:2;}
 .m-auto{margin:auto;}
-.m-t-4{margin-top:1rem;}
-.mb-12{margin-bottom:3rem;}
+.mb-10{margin-bottom:2.5rem;}
+.mb-16{margin-bottom:4rem;}
 .mb-18{margin-bottom:4.5rem;}
 .mb-2{margin-bottom:0.5rem;}
 .mb-4{margin-bottom:1rem;}
 .mb-8{margin-bottom:2rem;}
 .ml-32{margin-left:8rem;}
 .mr-2{margin-right:0.5rem;}
+.mt-4{margin-top:1rem;}
 .block{display:block;}
 .inline-block{display:inline-block;}
 .hidden{display:none;}
 .h-0{height:0;}
-.h-1\.2rem{height:1.2rem;}
+.h-1\.6rem{height:1.6rem;}
 .h-20px{height:20px;}
 .h-8\.5{height:2.125rem;}
 .max-w-750px{max-width:750px;}
 .min-w-375px{min-width:375px;}
 .w-0\.78rem{width:0.78rem;}
-.w-1\.5rem{width:1.5rem;}
 .w-20px{width:20px;}
 .w-8\.5{width:2.125rem;}
 .w-full{width:100%;}
@@ -47,12 +47,12 @@
 .justify-between{justify-content:space-between;}
 .overflow-auto{overflow:auto;}
 .break-all{word-break:break-all;}
-.border{border-width:1px;}
-.border-1\.8{border-width:1.8px;}
+.border,
+.border-1{border-width:1px;}
 .dark .dark\:border-2{border-width:2px;}
 .border-b-2{border-bottom-width:2px;}
 .border-gray-200{--un-border-opacity:1;border-color:rgba(229,231,235,var(--un-border-opacity));}
-.border-gray-3{--un-border-opacity:1;border-color:rgba(209,213,219,var(--un-border-opacity));}
+.border-gray-300{--un-border-opacity:1;border-color:rgba(209,213,219,var(--un-border-opacity));}
 .border-transparent{border-color:transparent;}
 .dark .dark\:border-\#393939{--un-border-opacity:1;border-color:rgba(57,57,57,var(--un-border-opacity));}
 .dark .dark\:hover\:border-white:hover{--un-border-opacity:1;border-color:rgba(255,255,255,var(--un-border-opacity));}
@@ -60,10 +60,14 @@
 .rounded{border-radius:0.25rem;}
 .rounded-2{border-radius:0.5rem;}
 .border-solid{border-style:solid;}
+.bg-\#FFCA3E{--un-bg-opacity:1;background-color:rgba(255,202,62,var(--un-bg-opacity));}
 .bg-gray-1,
 .bg-gray-100{--un-bg-opacity:1;background-color:rgba(243,244,246,var(--un-bg-opacity));}
 .dark .dark\:bg-\#191919{--un-bg-opacity:1;background-color:rgba(25,25,25,var(--un-bg-opacity));}
 .dark .dark\:bg-\#232323{--un-bg-opacity:1;background-color:rgba(35,35,35,var(--un-bg-opacity));}
+.dark .dark\:bg-\#F1B522{--un-bg-opacity:1;background-color:rgba(241,181,34,var(--un-bg-opacity));}
+.dark .dark\:hover\:bg-\#E9A917:hover{--un-bg-opacity:1;background-color:rgba(233,169,23,var(--un-bg-opacity));}
+.hover\:bg-\#FFD766:hover{--un-bg-opacity:1;background-color:rgba(255,215,102,var(--un-bg-opacity));}
 .dark .dark\:fill-\#000,
 .fill-\#000{--un-fill-opacity:1;fill:rgba(0,0,0,var(--un-fill-opacity));}
 .dark .dark\:fill-\#f0f0f0{--un-fill-opacity:1;fill:rgba(240,240,240,var(--un-fill-opacity));}
@@ -77,21 +81,23 @@
 .px-4px{padding-left:4px;padding-right:4px;}
 .px-9{padding-left:2.25rem;padding-right:2.25rem;}
 .py-\[calc\(0\.5rem-2px\)\]{padding-top:calc(0.5rem - 2px);padding-bottom:calc(0.5rem - 2px);}
-.py-1\.5{padding-top:0.375rem;padding-bottom:0.375rem;}
 .py-10{padding-top:2.5rem;padding-bottom:2.5rem;}
 .py-1px{padding-top:1px;padding-bottom:1px;}
 .py-2{padding-top:0.5rem;padding-bottom:0.5rem;}
+.py-2\.5{padding-top:0.625rem;padding-bottom:0.625rem;}
 .py-4{padding-top:1rem;padding-bottom:1rem;}
 .py-8{padding-top:2rem;padding-bottom:2rem;}
 .pb-10{padding-bottom:2.5rem;}
 .pl-1\.5{padding-left:0.375rem;}
+.pl-2{padding-left:0.5rem;}
 .pl-4{padding-left:1rem;}
+.pl-5{padding-left:1.25rem;}
 .pl-6{padding-left:1.5rem;}
 .pr-1{padding-right:0.25rem;}
 .pr-10{padding-right:2.5rem;}
 .pr-3{padding-right:0.75rem;}
 .pr-4{padding-right:1rem;}
-.pt-15{padding-top:3.75rem;}
+.pt-16{padding-top:4rem;}
 .pt-4{padding-top:1rem;}
 .text-center{text-align:center;}
 .vertical-middle{vertical-align:middle;}
@@ -102,16 +108,17 @@
 .text-base{font-size:1rem;line-height:1.5rem;}
 .text-sm{font-size:0.875rem;line-height:1.25rem;}
 .text-xl{font-size:1.25rem;line-height:1.75rem;}
+.font-400{font-weight:400;}
 .font-bold{font-weight:700;}
 .font-medium{font-weight:500;}
-.lh-0\.5rem{line-height:0.5rem;}
 .lh-1\.4em{line-height:1.4em;}
 .font-mono{font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;}
 .c-black,
 .text-black{--un-text-opacity:1;color:rgba(0,0,0,var(--un-text-opacity));}
 .c-gray,
 .c-gray-4{--un-text-opacity:1;color:rgba(156,163,175,var(--un-text-opacity));}
-.c-gray-3{--un-text-opacity:1;color:rgba(209,213,219,var(--un-text-opacity));}
+.c-gray-3,
+.text-gray-300{--un-text-opacity:1;color:rgba(209,213,219,var(--un-text-opacity));}
 .dark .dark\:hover\:c-white:hover{--un-text-opacity:1;color:rgba(255,255,255,var(--un-text-opacity));}
 .hover\:c-black:hover{--un-text-opacity:1;color:rgba(0,0,0,var(--un-text-opacity));}
 .hover\:c-blue:hover{--un-text-opacity:1;color:rgba(96,165,250,var(--un-text-opacity));}
@@ -120,7 +127,6 @@
 .text-gray-700{--un-text-opacity:1;color:rgba(55,65,81,var(--un-text-opacity));}
 .underline{text-decoration-line:underline;}
 .decoration-dotted{text-decoration-style:dotted;}
-.antialiased{-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;}
 .dark .dark\:opacity-0,
 .opacity-0{opacity:0;}
 .dark .dark\:opacity-100\%{opacity:1;}
@@ -128,11 +134,10 @@
 .focus\:outline-none:focus{outline:2px solid transparent;outline-offset:2px;}
 .transition{transition-property:color,background-color,border-color,outline-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);transition-duration:150ms;}
 .transition-duration-100{transition-duration:100ms;}
-.transition-duration-200{transition-duration:200ms;}
 @media (min-width: 640px){
 .sm\:block{display:block;}
 .sm\:hidden{display:none;}
-.sm\:pt-16{padding-top:4rem;}
+.sm\:h-1\.4rem{height:1.4rem;}
 }
 @media (min-width: 768px){
 .md\:text-1\.1rem{font-size:1.1rem;}
